# fedasync-staleness

./: .gitignore  BRANCH_COMPARISON_REPORT.md  BRANCH_INVENTORY.json  CLIENT_REPORT.md  EXPERIMENT_REPORT.md  FedAsync_Complete.ipynb  FedBuff_Complete.ipynb  IMPROVEMENT_SUGGESTIONS.md  README.md  SERVER_AGGREGATION_INVESTIGATION.md  STALENESS_TO_AVINASH_CHANGES.md  cuda.txt  experiment_results.csv  improvements.md  requirements.txt  resnet18_hyperparameter_tuning.py  resnet18_quick_tuning.py  suggestions.md
Analysis/: AccComp.py  AlphaSweep.py  StragglerPlot.py
FedAsync/: FedAsync.ipynb  StragglerSweep.py  client.py  config.yaml  run.py  server.py
FedBuff/: Fedbuff.ipynb  RESTRUCTURING_SUMMARY.md  client.py  config.yml  run.py  server.py
TrustWeight/: __init__.py  client.py  config.py  config.yaml  experiment.py  run.py  server.py  strategy.py  trustweight_colab.ipynb
baseline/: train_cifar10.py
experiments/: README.md
future_works/: ACCURACY_ANALYSIS.md  EXTENDED_TEST_ANALYSIS.md  README.md  SUMMARY.md  TEST_RESULTS.md  TEST_STATUS.md  commit_final_results.sh  commit_results.sh  monitor_progress.sh  quick_test.py  run_200_aggregations.py  run_extended_test.py  test_accuracy.py  test_comparison.py
hyperparameter_finetuning/: README.md
hyperparameter_tuning_results/: README.md  quick_results_20251209_223250.csv  quick_summary_20251209_223250.json  results_20251209_223221.csv
logs/: FedAsync.csv  FedAsyncClientParticipation.csv  (+6 more)
solution/: pyproject.toml
solution/TrustWeighted/: __init__.py  client_app.py  config.yml  server_app.py  strategy.py  task.py
(+527 files in other folders)
