[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TrustWeighted"
version = "1.0.0"
description = "Federated Learning with PyTorch Lightning and Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
    "pytorch-lightning==2.5.6",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "ray==2.51.1"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "TrustWeighted.server_app:app"
clientapp = "TrustWeighted.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
max-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4
